# typst-graphviz-plugin

./: .gitmodules  Build.sh  Gviztest.typ  Patch.sh  README.md  dot.wasm
extra/: Builtins.c  builddate.h  config.h  expat_config.h  typst_plugin.c
graphviz/: CHANGELOG.md  Doxyfile  Doxyfile.in  Makefile.in  aclocal.m4  builddate.h  config.h.in  configure  configure.ac  graphviz_version.h  version.m4
graphviz/cmd/: Makefile.in
graphviz/cmd/dot/: Makefile.in
graphviz/cmd/edgepaint/: Makefile.in
graphviz/cmd/gvedit/: Makefile.in  csettings.cpp  mainwindow.cpp  moc_csettings.cpp  moc_imageviewer.cpp  moc_mainwindow.cpp  moc_mdichild.cpp  qrc_mdi.cpp
graphviz/cmd/gvmap/: Makefile.in
graphviz/cmd/gvpr/: Makefile.in
graphviz/cmd/mingle/: Makefile.in  minglemain.cpp
graphviz/cmd/smyrna/: Makefile.in
graphviz/cmd/tools/: Makefile.in  acyclic.c  ccomps.c  gmlparse.c  gmlparse.h  gmlscan.c  gxl2gv.c  tred.c
graphviz/contrib/: Makefile.in
graphviz/contrib/diffimg/: Makefile.in
graphviz/contrib/prune/: Makefile.in
graphviz/debian/: changelog
graphviz/doc/: Makefile.in
graphviz/dot.demo/: neatopack.c
graphviz/graphs/: Makefile.in
graphviz/lib/: Makefile.in
graphviz/libltdl/: Makefile.in  configure
graphviz/macosx/: Info.plist
graphviz/plugin/: Makefile.am  Makefile.in
graphviz/plugin/vt100/: Makefile.am  Makefile.in  gvplugin_vt100.c
graphviz/redhat/: graphviz.spec.fedora  graphviz.spec.rhel  graphviz.spec.rhel.in
graphviz/share/: Makefile.in
graphviz/tclpkg/: Makefile.in
graphviz/tests/: Makefile.in  test_regression.py  tests.txt
(+194 files in other folders)
